--- a/Myportfolio2.css
+++ b/Myportfolio2.css
@@ -4,6 +4,7 @@ html {
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align : center;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
